fix: Ensure consistent padding on mobile in header (#1146)
* fix: Ensure consistent padding on mobile in header

* fix: I missed _a lot_ of usages

--- a/src/components/controllers/repl/style.module.css
+++ b/src/components/controllers/repl/style.module.css
@@ -8,6 +8,10 @@
 	background: #eee;
 	overflow: hidden;
 
+	@media (max-height: 431px) {
+		top: var(--header-height);
+	}
+
 	.toolbar {
 		position: relative;
 		top: 0;
